fixed the list of ingredients from overlapping on xl screen

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -43,8 +43,9 @@ label{
     font-size: 6vw;
     color: #F34213;
     text-align: left;
-    margin-bottom: 50px;
+    margin-bottom: 2%;
     list-style-position: inside;
+    height: auto;
 }
 
 
